add product and category controller and caching for GET requests
